wrapped images around a div to load to prevent layout shifting while they load, also improved accessibilty features

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
-.footer {
-  margin: 30px 30px 10px 30px;
+footer {
+  margin: 40px 30px 10px 30px;
   /* position: absolute;
   bottom: 0; */
   display: flex;
@@ -52,10 +52,10 @@ h4 {
   .tmdb{
     margin-right: 0;
   }
-  .footer{
+  footer{
     margin: 30px 10px 10px 15px;
   }
-  .footer h4{
+  footer h4{
     font-size: 15px;
   }
 
