--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,6 +1,6 @@
 .search-bar {
-
     position: relative;
+    margin-bottom: 10px !important;
 }
 
 .search-list {
